// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox snapshots checked 1`] = `
<DocumentFragment>
  <label
    class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_brand QxCheckbox_checked QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
  >
    <input
      checked=""
      class="QxCheckbox-input css-zk3nke-QxCheckbox-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxCheckbox-checkboxContainer css-154u63a-QxCheckbox-checkboxContainer"
    >
      <div
        class="QxCheckbox-overlay css-40mdt4-QxCheckbox-overlay"
      >
        <svg
          class="QxCheckbox-icon css-1pculg9-QxCheckbox-icon"
          fill="currentcolor"
          height="8"
          viewBox="0 0 11 8"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <span
      class="QxCheckbox-content css-j8ii2p-QxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox snapshots color_brand 1`] = `
<DocumentFragment>
  <label
    class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_brand QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
  >
    <input
      class="QxCheckbox-input css-zk3nke-QxCheckbox-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxCheckbox-checkboxContainer css-elag4i-QxCheckbox-checkboxContainer"
    >
      <div
        class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
      >
        <svg
          class="QxCheckbox-icon css-7yff3i-QxCheckbox-icon"
          fill="currentcolor"
          height="8"
          viewBox="0 0 11 8"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <span
      class="QxCheckbox-content css-j8ii2p-QxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox snapshots color_danger 1`] = `
<DocumentFragment>
  <label
    class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_danger QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
  >
    <input
      class="QxCheckbox-input css-jorhu0-QxCheckbox-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxCheckbox-checkboxContainer css-533jna-QxCheckbox-checkboxContainer"
    >
      <div
        class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
      >
        <svg
          class="QxCheckbox-icon css-1kxo616-QxCheckbox-icon"
          fill="currentcolor"
          height="8"
          viewBox="0 0 11 8"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <span
      class="QxCheckbox-content css-j8ii2p-QxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox snapshots color_info 1`] = `
<DocumentFragment>
  <label
    class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_info QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
  >
    <input
      class="QxCheckbox-input css-jorhu0-QxCheckbox-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxCheckbox-checkboxContainer css-1n2tcwi-QxCheckbox-checkboxContainer"
    >
      <div
        class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
      >
        <svg
          class="QxCheckbox-icon css-1kxo616-QxCheckbox-icon"
          fill="currentcolor"
          height="8"
          viewBox="0 0 11 8"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <span
      class="QxCheckbox-content css-j8ii2p-QxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox snapshots color_secondary 1`] = `
<DocumentFragment>
  <label
    class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_secondary QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
  >
    <input
      class="QxCheckbox-input css-zk3nke-QxCheckbox-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxCheckbox-checkboxContainer css-19bj5x3-QxCheckbox-checkboxContainer"
    >
      <div
        class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
      >
        <svg
          class="QxCheckbox-icon css-7yff3i-QxCheckbox-icon"
          fill="currentcolor"
          height="8"
          viewBox="0 0 11 8"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <span
      class="QxCheckbox-content css-j8ii2p-QxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox snapshots color_success 1`] = `
<DocumentFragment>
  <label
    class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_success QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
  >
    <input
      class="QxCheckbox-input css-jorhu0-QxCheckbox-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxCheckbox-checkboxContainer css-dkxqeu-QxCheckbox-checkboxContainer"
    >
      <div
        class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
      >
        <svg
          class="QxCheckbox-icon css-1kxo616-QxCheckbox-icon"
          fill="currentcolor"
          height="8"
          viewBox="0 0 11 8"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <span
      class="QxCheckbox-content css-j8ii2p-QxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox snapshots color_warning 1`] = `
<DocumentFragment>
  <label
    class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_warning QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
  >
    <input
      class="QxCheckbox-input css-jorhu0-QxCheckbox-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxCheckbox-checkboxContainer css-1wiwc86-QxCheckbox-checkboxContainer"
    >
      <div
        class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
      >
        <svg
          class="QxCheckbox-icon css-1kxo616-QxCheckbox-icon"
          fill="currentcolor"
          height="8"
          viewBox="0 0 11 8"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <span
      class="QxCheckbox-content css-j8ii2p-QxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox snapshots default 1`] = `
<DocumentFragment>
  <label
    class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_brand QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
  >
    <input
      class="QxCheckbox-input css-zk3nke-QxCheckbox-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxCheckbox-checkboxContainer css-elag4i-QxCheckbox-checkboxContainer"
    >
      <div
        class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
      >
        <svg
          class="QxCheckbox-icon css-7yff3i-QxCheckbox-icon"
          fill="currentcolor"
          height="8"
          viewBox="0 0 11 8"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <span
      class="QxCheckbox-content css-j8ii2p-QxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox snapshots disabled 1`] = `
<DocumentFragment>
  <label
    class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_brand QxCheckbox_disabled QxCheckbox_borderRadius_medium css-1hqh6a0-QxCheckbox-root"
  >
    <input
      class="QxCheckbox-input css-zk3nke-QxCheckbox-input"
      disabled=""
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxCheckbox-checkboxContainer css-fi5oz-QxCheckbox-checkboxContainer"
    >
      <div
        class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
      >
        <svg
          class="QxCheckbox-icon css-1s5ihd5-QxCheckbox-icon"
          fill="currentcolor"
          height="8"
          viewBox="0 0 11 8"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <span
      class="QxCheckbox-content css-k947k6-QxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox snapshots indeterminate 1`] = `
<DocumentFragment>
  <label
    class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_brand QxCheckbox_borderRadius_medium QxCheckbox_indeterminate css-1lgh59g-QxCheckbox-root"
  >
    <input
      class="QxCheckbox-input css-zk3nke-QxCheckbox-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxCheckbox-checkboxContainer css-elag4i-QxCheckbox-checkboxContainer"
    >
      <div
        class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
      >
        <div
          class="QxCheckbox-icon css-1t0o3x1-QxCheckbox-icon"
        />
      </div>
    </div>
    <span
      class="QxCheckbox-content css-j8ii2p-QxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox snapshots large 1`] = `
<DocumentFragment>
  <label
    class="QxCheckbox QxCheckbox_size_large QxCheckbox_color_brand QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
  >
    <input
      class="QxCheckbox-input css-zk3nke-QxCheckbox-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxCheckbox-checkboxContainer css-knuj0s-QxCheckbox-checkboxContainer"
    >
      <div
        class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
      >
        <svg
          class="QxCheckbox-icon css-1e8v94r-QxCheckbox-icon"
          fill="currentcolor"
          height="9"
          viewBox="0 0 12 9"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.37363 3.289C1.98363 2.899 1.35063 2.899 0.959632 3.289C0.568632 3.68 0.568632 4.313 0.959632 4.704L4.66563 8.41L11.3776 1.707C11.7686 1.317 11.7686 0.684 11.3786 0.293C10.9876 -0.0969995 10.3546 -0.0979995 9.96363 0.292L4.66663 5.582L2.37363 3.289Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <span
      class="QxCheckbox-content css-4zzbkl-QxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox snapshots max radius 1`] = `
<DocumentFragment>
  <label
    class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_brand QxCheckbox_borderRadius_max css-1lgh59g-QxCheckbox-root"
  >
    <input
      class="QxCheckbox-input css-zk3nke-QxCheckbox-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxCheckbox-checkboxContainer css-1cqx3ft-QxCheckbox-checkboxContainer"
    >
      <div
        class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
      >
        <svg
          class="QxCheckbox-icon css-7yff3i-QxCheckbox-icon"
          fill="currentcolor"
          height="8"
          viewBox="0 0 11 8"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <span
      class="QxCheckbox-content css-j8ii2p-QxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox snapshots medium 1`] = `
<DocumentFragment>
  <label
    class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_brand QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
  >
    <input
      class="QxCheckbox-input css-zk3nke-QxCheckbox-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxCheckbox-checkboxContainer css-elag4i-QxCheckbox-checkboxContainer"
    >
      <div
        class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
      >
        <svg
          class="QxCheckbox-icon css-7yff3i-QxCheckbox-icon"
          fill="currentcolor"
          height="8"
          viewBox="0 0 11 8"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <span
      class="QxCheckbox-content css-j8ii2p-QxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox snapshots medium radius 1`] = `
<DocumentFragment>
  <label
    class="QxCheckbox QxCheckbox_size_medium QxCheckbox_color_brand QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
  >
    <input
      class="QxCheckbox-input css-zk3nke-QxCheckbox-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxCheckbox-checkboxContainer css-elag4i-QxCheckbox-checkboxContainer"
    >
      <div
        class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
      >
        <svg
          class="QxCheckbox-icon css-7yff3i-QxCheckbox-icon"
          fill="currentcolor"
          height="8"
          viewBox="0 0 11 8"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <span
      class="QxCheckbox-content css-j8ii2p-QxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox snapshots small 1`] = `
<DocumentFragment>
  <label
    class="QxCheckbox QxCheckbox_size_small QxCheckbox_color_brand QxCheckbox_borderRadius_medium css-1lgh59g-QxCheckbox-root"
  >
    <input
      class="QxCheckbox-input css-zk3nke-QxCheckbox-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxCheckbox-checkboxContainer css-1dz3o29-QxCheckbox-checkboxContainer"
    >
      <div
        class="QxCheckbox-overlay css-14q538t-QxCheckbox-overlay"
      >
        <svg
          class="QxCheckbox-icon css-qqupxm-QxCheckbox-icon"
          fill="currentcolor"
          height="8"
          viewBox="0 0 10 8"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M1.69881 3.43125C1.38681 3.11925 0.880408 3.11925 0.567608 3.43125C0.254808 3.74405 0.254808 4.25045 0.567608 4.56325L3.53241 7.52805L8.90201 2.16565C9.21481 1.85365 9.21481 1.34725 8.90281 1.03445C8.59001 0.722449 8.08361 0.721649 7.77081 1.03365L3.53321 5.26565L1.69881 3.43125Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <span
      class="QxCheckbox-content css-1fegedw-QxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;
